--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     -->
 		<title>Philip Sanders UX Designer</title>
 	</head>
-	<body>
+	<body style="background-color: #282828" >
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 		<!--
